--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "prop-types": "^15.6.2",
     "react": "16.7.0",
     "react-dom": "16.5.2",
     "react-icons": "^3.3.0",
