--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "react-scripts": "2.1.3",
     "styled-components": "^4.1.3"
   },
-  "homepage" : "http://myname.github.io/myapp",
+  "homepage" : "http://flickz.github.io/p-nav",
   "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
